# TNM-Classifier-Tester

./: .gitignore  README.md  pyproject.toml
data/: tnm_report.csv
src/: dataset.py  main.py  model.py  train.py  utils.py
