[project]
name = "TNM-Classifier-Tester"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.5.2",
    "torch>=2.4.1",
    "polars>=1.7.1",
    "transformers>=4.44.2",
    "wordcloud>=1.9.3",
    "urllib3>=2.2.3",
    "ipywidgets>=8.1.5",
    "fugashi[unidic-lite]>=1.3.2",
    "mecab-python3>=1.0.9",
    "rhoknp>=1.7.0",
    "ipadic>=1.0.0",
    "fire>=0.6.0",
    "datetime>=5.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/TNM_Classifier_Tester"]
